--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -19,7 +19,7 @@
   font-family: roboto;
 }
 
-.loginmodal-container input[type=submit] {
+.loginmodal-container button {
   width: 100%;
   display: block;
   margin-bottom: 10px;
@@ -93,4 +93,9 @@
 
 .login-help{
   font-size: 12px;
+}
+
+.help-block {
+    font-size: 12px;
+    color: red;
 }
